[BUGFIX] Missing padding before content collection creation form
In the media browser/module there's no padding between the creation form
and the edit icon for collections, when no collections have been created.

Releases: master, 2.0
Related: NEOS-251
Original-Commit-Hash: c534e6a8ac0a9f7f5390bd53590dbf361de6ccdb

--- a/TYPO3.Neos/Resources/Private/Styles/Media/_Media.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Media/_Media.scss
@@ -350,7 +350,6 @@
 			.neos-media-aside-list {
 				background-color: $grayLight;
 				border-top: 1px solid $grayLight;
-				margin-bottom: $defaultMargin;
 
 				&.neos-media-aside-list-editing-active {
 					li .neos-sidelist-edit-actions {
@@ -468,6 +467,7 @@
 
 			> form {
 				display: none;
+				margin-top: $defaultMargin;
 
 				&.neos-media-aside-list-editing-active {
 					display: block;
